--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,13 +19,13 @@ theme: readthedocs
 
 
 docs_dir: sources
-repo_url: http://github.com/sciann/sciann
-site_url: http://sciann.com/
+repo_url: https://github.com/sciann/sciann
+site_url: https://sciann.com/
 site_description: 'Documentation for Keras, the Python Deep Learning library.'
 
 # Math markdown. 
 markdown_extensions: [math]
-extra_javascript: ['https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML','mathjaxhelper.js']
+extra_javascript: ['//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML','mathjaxhelper.js']
 
 nav:
 - Home: index.md
