--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,9 @@ install:
   # install Keras.
   - pip install keras==2.2.4 --progress-bar off
 
+  # install Sciann.
+  - pip install sciann --progress-bar off
+
   # install mkdocs
   - pip install mkdocs --progress-bar off
 
@@ -58,8 +61,6 @@ script:
       PYTHONPATH=$PWD:$PYTHONPATH py.test --pep8 -m pep8 -n0 && py.test tests/docs;
     elif [[ "$TEST_MODE" == "API" ]]; then
       PYTHONPATH=$PWD:$PYTHONPATH pip install git+git://www.github.com/sicann/sciann.git && python update_api.py && pip install -e .[tests] --progress-bar off && py.test tests/test_api.py;
-    elif [[ "$RUN_ONLY_BACKEND_TESTS" == "1" ]]; then
-      PYTHONPATH=$PWD:$PYTHONPATH py.test  tests/keras/backend/;
     else
       PYTHONPATH=$PWD:$PYTHONPATH py.test tests/ --ignore=tests/integration_tests --ignore=tests/docs --ignore=tests/keras/legacy/layers_test.py --ignore=tests/test_api.py --cov-config .coveragerc --cov=keras tests/;
     fi
