--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ matrix:
     include:
         - python: 3.6
           env: KERAS_BACKEND=tensorflow TEST_MODE=API
-        - python: 3.6
-          env: KERAS_BACKEND=tensorflow TEST_MODE=PEP8_DOC PIL=Pillow
-        - python: 2.7
-          env: KERAS_BACKEND=tensorflow
-        - python: 3.6
-          env: KERAS_BACKEND=tensorflow
+#        - python: 3.6
+#          env: KERAS_BACKEND=tensorflow TEST_MODE=PEP8_DOC PIL=Pillow
+#        - python: 2.7
+#          env: KERAS_BACKEND=tensorflow
+#        - python: 3.6
+#          env: KERAS_BACKEND=tensorflow
 install:
   # code below is taken from http://conda.pydata.org/docs/travis.html
   # We do this conditionally because it saves us some downloading if the
@@ -60,16 +60,10 @@ install:
 script:
   - export MKL_THREADING_LAYER="GNU"
   # create dataset directory to avoid concurrent directory creation at runtime
-  - mkdir ~/.sciann/datasets
+  # - mkdir ~/.sciann/datasets
   # set up sciann backend
-  - sed -i -e 's/"backend":[[:space:]]*"[^"]*/"backend":\ "'$KERAS_BACKEND'/g' ~/.sciann/sciann.json;
-  - echo -e "Running tests with the following config:\n$(cat ~/.sciann/sciann.json)"
-  - if [[ "$TEST_MODE" == "INTEGRATION_TESTS" ]]; then
-      PYTHONPATH=$PWD:$PYTHONPATH py.test tests/integration_tests;
-    elif [[ "$TEST_MODE" == "PEP8_DOC" ]]; then
-      PYTHONPATH=$PWD:$PYTHONPATH py.test --pep8 -m pep8 -n0 && py.test tests/docs;
-    elif [[ "$TEST_MODE" == "API" ]]; then
+  # - sed -i -e 's/"backend":[[:space:]]*"[^"]*/"backend":\ "'$KERAS_BACKEND'/g' ~/.sciann/sciann.json;
+  # - echo -e "Running tests with the following config:\n$(cat ~/.sciann/sciann.json)"
+  - if [[ "$TEST_MODE" == "API" ]]; then
       PYTHONPATH=$PWD:$PYTHONPATH pip install git+git://www.github.com/sicann/sciann.git && python update_api.py && pip install -e .[tests] --progress-bar off && py.test tests/test_api.py;
-    else
-      PYTHONPATH=$PWD:$PYTHONPATH py.test tests/ --ignore=tests/integration_tests --ignore=tests/docs --ignore=tests/keras/legacy/layers_test.py --ignore=tests/test_api.py --cov-config .coveragerc --cov=keras tests/;
     fi
