Update 0.3.3 - Restructuing the constraints

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -21,8 +21,9 @@ theme: readthedocs
 docs_dir: sources
 site_dir: ../../SciANN_site
 repo_url: https://github.com/sciann/sciann
-site_url: https://sciann.com/
+site_url: https://www.sciann.com/
 site_description: 'Documentation for SciANN.'
+google_analytics: ['UA-149481893-1', 'www.sciann.com']
 
 # Math markdown. 
 markdown_extensions: [extra, tables, fenced_code]
